--- a/pexels-start.html
+++ b/pexels-start.html
@@ -46,7 +46,9 @@
       </div>
     </nav>
   </header>
+  <!-- main -->
   <main role="main">
+    <!-- section -->
     <section class="jumbotron text-center">
 
       <div class="container">
@@ -289,6 +291,8 @@
       </div>
     </div>
   </main>
+
+  <!-- foot -->
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
