--- a/pexels-start.html
+++ b/pexels-start.html
@@ -8,6 +8,18 @@
   <title>EPICODE - Pexels API</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
+  <style>
+    .card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    .clickTitle {
+      display: -webkit-box;
+    }
+  </style>
 </head>
 
 <body>
@@ -61,6 +73,7 @@
           <a href="#" id="loadImages" class="btn btn-primary my-2">Load Images</a>
           <a href="#" id="loadSecondaryImages" class="btn btn-secondary my-2">Load Secondary Images</a>
         </p>
+        <!-- search -->
         <div class="input-group mb-3 w-50 mx-auto">
           <input type="text" id="searchInput" class="form-control" placeholder="Cerca immagini...">
           <button class="btn btn-dark" id="searchBtn">Cerca</button>
