--- a/pexels-start.html
+++ b/pexels-start.html
@@ -18,8 +18,13 @@
 
     .clickTitle {
       display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   </style>
+  
 </head>
 
 <body>
